docs: expand TODO.md with debug findings and shape-map re-enable roadmap
Signed-off-by: Karl Pietrzak <karl@medplum.com>